[Fix] #134 Chỉnh lại sidebar của product cho gọn hơn